--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-	"name": "jsdoc-boilerplate",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"docs": "jsdoc -c jsdoc.json"
-	},
-	"devDependencies": {
-		"jsdoc": "^3.6.11"
-	}
+  "name": "pre-onboarding-2",
+  "version": "1.0.0",
+  "private": true,
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "docs": "jsdoc -c jsdoc.json",
+    "deploy": "gh-pages -d docs"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "jsdoc": "^3.6.11"
+  },
+  "homepage": "https://zubetcha.github.io/"
 }
